--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monsters-rolodex",
   "version": "0.1.0",
   "private": true,
-  "homapage": "https://laurilaurits.github.io/monsters-rolodex/",
+  "homepage": "https://laurilaurits.github.io/monsters-rolodex/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
